# erinra-mcp

./: .gitattributes  .gitignore  .mcp.json  .mise.toml  .nibs.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  THIRD_PARTY_LICENSES.txt  about.hbs  about.toml  build.rs
.claude/: settings.json
.claude/agents/: mcp-design-reviewer.md
.github/workflows/: ci.yml  publish-crate.yml  release.yml
plans/: memory-service-layer-rfc.md  sync-import-closure-rfc.md
scripts/: gen-licenses.sh
src/: cli.rs  config.rs  lib.rs  main.rs  relay.rs  service.rs
src/db/: error.rs  helpers.rs  mod.rs  ops_core.rs  ops_search.rs  ops_sync.rs  search.rs  types.rs
src/embedding/: mod.rs
src/mcp/: handlers.rs  mod.rs  types.rs
src/sync/: background.rs  mod.rs
src/web/: auth.rs  daemon.rs  mod.rs  routes.rs
tests/: mcp_protocol.rs
web/: .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: dashboard.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts
web/src/: app.css
web/src/lib/: api.test.ts  api.ts  markdown.test.ts  markdown.ts
web/src/lib/components/: ConfirmDialog.svelte  ConfirmDialog.test.ts  FilterBar.svelte  FilterBar.test.ts  MemoryList.svelte  MemoryList.test.ts  Pagination.svelte  Pagination.test.ts  Sidebar.svelte
web/src/lib/stores/: memory-browser.svelte.test.ts  memory-browser.svelte.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/memory/[id]/: +page.svelte
